crates/flight-simconnect/tests/snapshots/simconnect_snapshots__aircraft_db_all_icao_codes.snap
---
source: crates/flight-simconnect/tests/simconnect_snapshots.rs
expression: codes
---
[
    "A20N",
    "A306",
    "A310",
    "A319",
    "A320",
    "A321",
    "A3ST",
    "B06",
    "B350",
    "B737",
    "B738",
    "B739",
    "B748",
    "B77L",
    "B77W",
    "B78X",
    "BE20",
    "BE58",
    "C140",
    "C152",
    "C172",
    "C208",
    "C25C",
    "C310",
    "C525",
    "C700",
    "CRJ7",
    "CRJ9",
    "CRJX",
    "DA40",
    "DA62",
    "DC3",
    "DG1T",
    "DHC6",
    "E50P",
    "EC45",
    "F18S",
    "H135",
    "P28A",
    "P38",
    "PA28",
    "PC12",
    "R44",
    "RV7",
    "S76",
    "SF50",
    "SR22",
    "TBM9",
]
