crates/flight-simconnect/tests/snapshots/simconnect_snapshots__aircraft_type_variants.snap
---
source: crates/flight-simconnect/tests/simconnect_snapshots.rs
expression: types
---
[
    SingleProp,
    TwinProp,
    Turboprop,
    SingleJet,
    TwinJet,
    Helicopter,
    Glider,
]
