crates/flight-simconnect/tests/snapshots/simconnect_snapshots__event_catalog_all_names.snap
---
source: crates/flight-simconnect/tests/simconnect_snapshots.rs
expression: names
---
[
    "ADF_COMPLETE_SET",
    "AP_ALT_HOLD",
    "AP_APR_HOLD",
    "AP_BC_HOLD",
    "AP_HDG_HOLD",
    "AP_LOC_HOLD",
    "AP_MASTER",
    "AP_NAV1_HOLD",
    "AP_SPD_HOLD",
    "AP_VS_HOLD",
    "AXIS_AILERONS_SET",
    "AXIS_ELEVATOR_SET",
    "AXIS_MIXTURE_SET",
    "AXIS_PROPELLER_SET",
    "AXIS_RUDDER_SET",
    "AXIS_SPOILER_SET",
    "AXIS_THROTTLE_SET",
    "COM1_TRANSMIT_SELECT",
    "COM2_TRANSMIT_SELECT",
    "COM_STBY_RADIO_SWAP",
    "ELEV_TRIM_DN",
    "ELEV_TRIM_UP",
    "ENGINE_AUTO_SHUTDOWN",
    "ENGINE_AUTO_START",
    "FLAPS_DECR",
    "FLAPS_DOWN",
    "FLAPS_INCR",
    "FLAPS_SET",
    "FLAPS_UP",
    "FLIGHT_LEVEL_CHANGE",
    "GEAR_DOWN",
    "GEAR_TOGGLE",
    "GEAR_UP",
    "MIXTURE_LEAN",
    "MIXTURE_RICH",
    "NAV1_RADIO_SWAP",
    "PARKING_BRAKES",
    "PAUSE_TOGGLE",
    "PITOT_HEAT_TOGGLE",
    "SIM_RATE_DECR",
    "SIM_RATE_INCR",
    "SPOILERS_ARM_TOGGLE",
    "THROTTLE_CUT",
    "THROTTLE_DECR",
    "THROTTLE_FULL",
    "THROTTLE_INCR",
    "TOGGLE_AVIONICS_MASTER",
    "TOGGLE_BEACON_LIGHTS",
    "TOGGLE_LANDING_LIGHTS",
    "TOGGLE_LOGO_LIGHTS",
    "TOGGLE_MASTER_ALTERNATOR",
    "TOGGLE_MASTER_BATTERY",
    "TOGGLE_NAV_LIGHTS",
    "TOGGLE_STARTER1",
    "TOGGLE_STARTER2",
    "TOGGLE_STROBE_LIGHTS",
    "TOGGLE_TAXI_LIGHTS",
    "TOGGLE_WING_LIGHTS",
    "VIEW_CHASE",
    "VIEW_COCKPIT_FORWARD",
    "VIEW_EXTERNAL",
    "VIEW_VIRTUAL_COCKPIT",
    "XPNDR_SET",
]
