crates/flight-simconnect/tests/snapshots/simconnect_snapshots__event_catalog_flight_controls.snap
---
source: crates/flight-simconnect/tests/simconnect_snapshots.rs
expression: items
---
[
    (
        "AXIS_AILERONS_SET",
        false,
    ),
    (
        "AXIS_ELEVATOR_SET",
        false,
    ),
    (
        "AXIS_MIXTURE_SET",
        false,
    ),
    (
        "AXIS_PROPELLER_SET",
        false,
    ),
    (
        "AXIS_RUDDER_SET",
        false,
    ),
    (
        "AXIS_SPOILER_SET",
        false,
    ),
    (
        "AXIS_THROTTLE_SET",
        false,
    ),
    (
        "ELEV_TRIM_DN",
        false,
    ),
    (
        "ELEV_TRIM_UP",
        false,
    ),
    (
        "FLAPS_DECR",
        false,
    ),
    (
        "FLAPS_DOWN",
        false,
    ),
    (
        "FLAPS_INCR",
        false,
    ),
    (
        "FLAPS_SET",
        false,
    ),
    (
        "FLAPS_UP",
        false,
    ),
    (
        "GEAR_DOWN",
        false,
    ),
    (
        "GEAR_TOGGLE",
        true,
    ),
    (
        "GEAR_UP",
        false,
    ),
    (
        "PARKING_BRAKES",
        true,
    ),
    (
        "SPOILERS_ARM_TOGGLE",
        true,
    ),
]
